# AniSearch

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  docker-compose.infra.yml  parser.py  pyproject.toml  requirements.txt  result.json  setup.py
data/: anime.json  external.dvc
docs/: Makefile  README.md  conf.py  index.rst  make.bat
src/anisearch/: configs.py  data_models.py  main.py  settings.local.yaml.template  settings.prod.yaml  startup.py
src/anisearch/core/: __init__.py  services.py  storage.py
src/anisearch/endpoints/: admin.py  api.py  content.py  routers.py  user.py
src/anisearch/static/: index.html  script.js  style.css  users-script.js  users.html
src/cli/: make_dataset.py  upload_data.py
src/data/: __init__.py  artifacts.py  data_writers.py  make_dataset.py  upload_artifacts.py  utils.py
src/data/cli/: make_dataset.py
src/data/shikimori/: __init__.py  anime_parser.py  shikimori_anime_parser.py  user_data_parser.py
src/data/utils/: __init__.py  data_classes.py  data_writers.py  web_drivers.py
src/features/: __init__.py  build_features.py  document_builder.py
src/features/templates/: anime_template.j2
src/shikimori/: data_writers.py  shikimori_user_data_parser.py  utils.py
src/tests/: test_parsers.py
src/tests/data/: test_shikimori.py  test_utils.py
