[tool.poetry]
name = "anime-rec-sys"
version = "0.1.0"
description = ""
authors = ["ssslakter","cortuzz"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
bs4 = "^0.0.1"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
pytest = "^7.3.1"
pytest-dependency = "0.5.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.3"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length=120
disable=[
    'import-error',
    'too-few-public-methods',
    'missing-module-docstring',
    'too-many-locals'
    ]
ignore = 'external'